fix: update style heading spacing and size

--- a/www/styles/page.css
+++ b/www/styles/page.css
@@ -33,6 +33,11 @@
     background-color:white;
     font-size:1.2rem;
 
+    & h2 {
+      font-size:2.3rem;
+      margin: 5px 0;
+    }
+
     & h3 {
       font-size:2rem;
       margin: 5px 0;
